made some comment changes for the html file

--- a/templates/user_templates/resetPassword.html
+++ b/templates/user_templates/resetPassword.html
@@ -22,6 +22,7 @@
                             </div>
                             
                             <div class="col-md-12 form-group">
+                                {% comment %} asdjfhasduf {% endcomment %}
                                 
                                 <button type="submit" value="submit" class="btn_3">
                                     log in
