admin dashboard random changes

--- a/templates/admin_templates/admin_dashbord.html
+++ b/templates/admin_templates/admin_dashbord.html
@@ -24,6 +24,7 @@
  
     <div class="pagetitle">
       <h1 style="color: rgb(84, 75, 75);">Dashboard</h1>
+      {% comment %} this is admin dashboard {% endcomment %}
   
     </div><!-- End Page Title -->
     <section class="section dashboard">
