--- a/templates/user_templates/cart.html
+++ b/templates/user_templates/cart.html
@@ -138,7 +138,7 @@
 
                     </td>
                     <td>
-                      <h5><span class="sub_total total" data-id="{{cart_item.id}}"><b> ₹{{cart_item.sub_total}} </b></span></h5>
+                      <h5><span class="sub_total total" data-id="{{cart_item.id}}"><b> ₹{{total}} </b></span></h5>
                       <h5 class="pt-3">₹{{tax}}</h5>
                       <h5 class="pt-3"> <b ><span id="cart_total">{{cart_total}}</span> </b> </h5>
 
