--- a/templates/user_templates/login_view.html
+++ b/templates/user_templates/login_view.html
@@ -41,7 +41,7 @@
                                             log in
                                         </button>
                                         <a class="lost_pass" href="{% url 'phone_verify' %}">Login Using Phone</a>
-                                        <a class="lost_pass" href="/password_reset">forget password?</a>
+                                        <a class="lost_pass" href="{% url 'forgotPassword' %}">forget password?</a>
                                     </div>
                                 </form>
                             </div>
