--- a/templates/user_templates/shop.html
+++ b/templates/user_templates/shop.html
@@ -5,10 +5,17 @@
     <main>
        
         <!-- Latest Products Start -->
-        <section class="popular-items latest-padding ">
+
+       
+
+
+
+        <section class="popular-items  ">
             <div class="container">
                 <div class="row product-btn justify-content-between ">
                     <div class="properties__button">
+
+                        
                         <!--Nav Button  -->
                         <nav>                                                      
                             <div class="nav nav-tabs" id="nav-tab" role="tablist">
