--- a/templates/admin_templates/admin_index.html
+++ b/templates/admin_templates/admin_index.html
@@ -183,8 +183,8 @@
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-line fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today Sale</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <p class="mb-2">Today Orders</p>
+                                <h6 class="mb-0">{{total_orders}}</h6>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <i class="fa fa-chart-bar fa-3x text-primary"></i>
                             <div class="ms-3">
                                 <p class="mb-2">Total Sale</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <h6 class="mb-0">{{totalSales}}</h6>
                             </div>
                         </div>
                     </div>
@@ -201,8 +201,8 @@
                         <div class="bg-secondary rounded d-flex align-items-center justify-content-between p-4">
                             <i class="fa fa-chart-area fa-3x text-primary"></i>
                             <div class="ms-3">
-                                <p class="mb-2">Today Revenue</p>
-                                <h6 class="mb-0">$1234</h6>
+                                <p class="mb-2">Total Users</p>
+                                <h6 class="mb-0">{{totalUsers}}</h6>
                             </div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
             <!-- Sale & Revenue End -->
 
 
-            <!-- Sales Chart Start -->
+            {% comment %} <!-- Sales Chart Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
                     <div class="col-sm-12 col-xl-6">
@@ -242,78 +242,88 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> {% endcomment %}
             <!-- Sales Chart End -->
 
 
             <!-- Recent Sales Start -->
-            <div class="container-fluid pt-4 px-4">
-                <div class="bg-secondary text-center rounded p-4">
-                    <div class="d-flex align-items-center justify-content-between mb-4">
-                        <h6 class="mb-0">Recent Salse</h6>
-                        <a href="">Show All</a>
-                    </div>
+            
                     <div class="table-responsive">
-                        <table class="table text-start align-middle table-bordered table-hover mb-0">
-                            <thead>
-                                <tr class="text-white">
-                                    <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Invoice</th>
-                                    <th scope="col">Customer</th>
-                                    <th scope="col">Amount</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="container mt-5">
+                            <div class="row ">
+                                <div class="col-lg-10 mx-auto">
+                            <div class="bg-secondary rounded h-100 p-4 ">
+                                <h6 class="mb-4">Orders</h6>
+                                <div class="table-responsive">
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                {% comment %} <th scope="col">Order Number</th> {% endcomment %}
+                                                <th scope="col">Payment Number</th>
+                                                <th scope="col">Payment Method</th>
+                                                <th scope="col">Amount Paid</th>
+                                                <th scope="col">Payment Status</th>
+                            
+                            
+                            
+                                                {% comment %} <th scope="col">Full name</th>
+                                                <th scope="col">Phone</th>
+                                                <th scope="col">Email</th>
+                                                <th scope="col">IP</th> {% endcomment %}
+                                                <th scope="col">Created At</th>
+                            
+                            
+                                                
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            {% for order in orders %}
+                                            <tr>
+                                                {% comment %} <th scope="row">{{order.order.order_number}}</td> {% endcomment %}
+                                                <td> {{ order.id }}</th>
+                                                <td> {{ order.payment.payment_method }}</td>
+                                                <td> {{ order.payment.amount_paid }}</td>
+                                                <td> {{ order.payment.status }}</td>
+                                                
+                            
+                            
+                                                {% comment %} <td>{{order.full_name}}</td>
+                            
+                                                <td>{{order.order.phone}}</td>
+                                                <td>{{order.order.email}}</td>
+                                                <td>{{order.order.ip}}</td> {% endcomment %}
+                                                <td>{{order.order.created_at}}</td>
+                                                <td style="color: {% if order.order.status == 'New' %}blue{% elif order.order.status == 'Delivered' %}green{% elif order.order.status == 'Pending' %}yellow{% elif order.order.status == 'Confirmed' %}orange{% elif order.order.status == 'Cancelled' %}red {% elif order.order.status == 'Shipped' %}white{% endif %}">{{ order.order.status }}</td>
+                            
+                                                <td> 
+                                                    <form method="POST" action="{% url 'edit_order' order.order.id %}">
+                                                        {% csrf_token %}
+                                                        <select name="status">
+                                                            <option value="New" {% if order.order.status == 'New' %}selected{% endif %}>New</option>
+                                                            <option value="Pending" {% if order.order.status == 'Pending' %}selected{% endif %}>Pending</option>
+                                                            <option value="Confirmed" {% if order.order.status == 'Confirmed' %}selected{% endif %}>Confirmed</option>
+                                                            <option value="Shipped" {% if order.order.status == 'Shipped' %}selected{% endif %}>Shipped</option>
+                                                            <option value="Delivered" {% if order.order.status == 'Delivered' %}selected{% endif %}>Delivered</option>
+                            
+                                                            <option value="Cancelled" {% if order.order.status == 'Cancelled' %}selected{% endif %}>Cancelled</option>
+                                                        </select>
+                                                        <button type="submit">Change</button>
+                                                    </form>
+                                      
+                                                </td>
+                                                
+                                                
+                                            </tr>
+                                            {% endfor %} 
+                                            
+                                        </tbody>
+                                    </table>
+                                    
+                                </div>
+                           
+                            </div>
+                            
+                            </div>
                     </div>
                 </div>
             </div>
