--- a/templates/order_templates/order_complete.html
+++ b/templates/order_templates/order_complete.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row justify-content-center mt-5">
-      <div class="col-md-8">
+      <div class="col-md-12">
         
             <div class="text-center mb-4">
               <img src="{%static 'arrow-images/order_complete_image.png'%}" alt="Order Complete" class="img-fluid" style="max-width: 30%;">
@@ -14,46 +14,201 @@
               <p>Your order has been successfully placed.</p>
             </div>
             <div class="d-flex justify-content-center mb-5">
-                <a href="{% url 'shop' %}" class="btn btn-primary text-center">Shop More</a>
-              </div>
-              <div class="card">
-          
-                <div class="card-body">
-            <div class="card-header">
-                <div class="logo" >
+              <a href="{% url 'shop' %}" class="btn btn-primary text-center">Shop More</a>
+            </div>
+            
+            <div>
+            <div class="card">
+              <div class="card-body">
+                <div class="card-header">
+                  <div class="logo">
                     <a href="index.html"><img src="{% static '/img/logo/logo.png'%}" alt=""></a>
+                  </div>
+                  <h3 class="text-center">Order Invoice</h3>
                 </div>
-                <h3 class="text-center">Order Invoice </h3>
-              </div>
-            <div class="text-center mt-4">
-              
-              <p>Order ID: #{{order_number}}</p>
-              <p>Transaction ID: #{{transID}}</p>
-             <p>Date: {{order.created_at}}</p>
-             <p>Status: {{payment.status}}</p>
+            
+                {% comment %} <table class="table table-bordered" id="Invoice_of_your_order">
+                  <tbody>
+                    <tr>
+                      <th>Order ID:</th>
+                      <td>{{ order_number }}</td>
+                    </tr>
+                    <tr>
+                      <th>Transaction ID:</th>
+                      <td>{{ payment_id }}</td>
+                    </tr>
+                    <!-- Include any other order-related information in the same format -->
+                    <tr>
+                      <th>Total Amount:</th>
+                      <td>₹{{ total_price }}</td>
+                    </tr>
+                  </tbody>
+                </table>
+            
+                <div class="text-center mt-4">
+                  <h5>Shipping Details</h5>
+                  <table class="table table-bordered">
+                    <tbody>
+                      <tr>
+                        <th>Name:</th>
+                        <td>{{ address.name }}</td>
+                      </tr>
+                      <tr>
+                        <th>Address Line 1:</th>
+                        <td>{{ address.address_line_1 }}</td>
+                      </tr>
+                      <tr>
+                        <th>State/City:</th>
+                        <td>{{ address.state }}, {{ address.city }}</td>
+                      </tr>
+                      <tr>
+                        <th>Country:</th>
+                        <td>{{ address.country }}</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+            
+                <div class="text-center mt-4">
+                  <h5>Contact Information</h5>
+                  <table class="table table-bordered">
+                    <tbody>
+                      <tr>
+                        <th>Email:</th>
+                        <td>{{ user.email }}</td>
+                      </tr>
+                      <tr>
+                        <th>Phone:</th>
+                        <td>{{ user.phone_number }}</td>
+                      </tr>
+                    </tbody>
+                  </table> {% endcomment %}
 
-              <p>Total Amount: ${{amount_paid}}</p>
+
+                  <table class="table table-bordered" id="Invoice_of_your_order">
+                <tbody>
+                  <tr>
+                    <th>Order ID:</th>
+                    <td>{{ order_number }}</td>
+                    <th>Transaction ID:</th>
+                    <td>{{ payment_id }}</td>
+                  </tr>
+                  <!-- Include any other order-related information in the same format -->
+                  <tr>
+                    <th>Total Amount:</th>
+                    <td colspan="3">₹{{ total_price }}</td>
+                  </tr>
+                  <tr>
+                    <th colspan="2">Shipping Details</th>
+                    <th colspan="2">Contact Information</th>
+                  </tr>
+                  <tr>
+                    <th>Name:</th>
+                    <td>{{ address.name }}</td>
+                    <th>Email:</th>
+                    <td>{{ user.email }}</td>
+                  </tr>
+                  <tr>
+                    <th>Address Line 1:</th>
+                    <td>{{ address.address_line_1 }}</td>
+                    <th>Phone:</th>
+                    <td>{{ user.phone_number }}</td>
+                  </tr>
+                  <tr>
+                    <th>State/City:</th>
+                    <td>{{ address.state }}, {{ address.city }}</td>
+                    <td colspan="2"></td>
+                  </tr>
+                  <tr>
+                    <th>Country:</th>
+                    <td>{{ address.country }}</td>
+                    <td colspan="2"></td>
+                  </tr>
+                </tbody>
+              </table>
+
+                </div>
+              </div>
             </div>
-            <div class="text-center mt-4">
-              <h5>Shipping Details</h5>
-              <p>{{order.full_name}}</p>
-              <p>{{order.address_line_1}}</p>
-              <p>{{order.state}},{{order.city}}</p>
-              <p>{{order.country}}</p>
-            </div>
-            <div class="text-center mt-4">
-              <h5>Contact Information</h5>
-              <p>Email: {{user.email}}</p>
-              <p>Phone: {{user.phone_number}}</p>
-            </div>
-          </div>
-        </div>
+            <div class="text-center mt-3 col-6">
+              <a onclick="exportTableToPDF('Invoice_of_your_order','Invoice_of_your_order')" class="btn btn-success">Download Invoice</a>
+              </div>
       </div>
     </div>
   </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+  <script src="https://unpkg.com/xlsx/dist/xlsx.core.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.16/jspdf.plugin.autotable.min.js"></script>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+						 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.16/jspdf.plugin.autotable.min.js"></script>
+						 <script src="https://unpkg.com/xlsx/dist/xlsx.core.min.js"></script>
+						 
+					 
+					 
+					 
+							 <script>
+								 function exportTableToExcel(tableID, filename = '') {
+									 console.log("ok")
+								 var tableSelect = document.getElementById(tableID);
+								 var sheet = XLSX.utils.table_to_sheet(tableSelect);
+							 
+								 // Create a new workbook and add the sheet
+								 var workbook = XLSX.utils.book_new();
+								 XLSX.utils.book_append_sheet(workbook, sheet, 'Sheet1');
+							 
+								 // Specify the file name
+								 filename = filename ? filename + '.xlsx' : 'excel_data.xlsx';
+							 
+								 // Generate the XLSX file
+								 var excelData = XLSX.write(workbook, { bookType: 'xlsx', type: 'array' });
+								 var blob = new Blob([excelData], { type: 'application/vnd.openxmlformats-officedocument.spreadsheetml.sheet' });
+							 
+								 // Download the blob as a file
+								 download(blob, filename);
+								 }
+							 
+								 function download(blob, filename) {
+								 var url = window.URL.createObjectURL(blob);
+								 var link = document.createElement('a');
+								 link.href = url;
+								 link.download = filename;
+								 link.click();
+								 }
+							 
+							 
+								 </script>
+							 
+							 
+								 <!-- convert to pdf script -->
+							 
+							 <script>
+							 
+								 function exportTableToPDF(tableID, filename = '') {
+								   var tableSelect = document.getElementById(tableID);
+								 
+								   // Specify the file name
+								   filename = filename ? filename : 'order_id';
+								 
+								   // Generate the PDF file
+								   const { jsPDF } = window.jspdf; 
+								   var doc = new jsPDF();
+								   doc.autoTable({ html: '#' + tableID });
+								 
+								   // Download the PDF file
+								   doc.save(filename + '.pdf');
+								 }
+					      </script>
+			<script>
+  
+
 
 {% endblock %}
