--- a/templates/user_templates/edit_profile.html
+++ b/templates/user_templates/edit_profile.html
@@ -106,10 +106,10 @@
                     <a class="nav-link active" href="{% url 'user_profile'%}">USER PROFILE</a>
                 </li>
                 <li class="nav-item pt-5">
-                    <a class="nav-link" href="{%url 'addressbook'%}">ADDRESS BOOK</a>
-                </li>
+                    <a class="nav-link" href="{%url 'addressbook'%}">ADDRESS BOOK</a> 
+                </li> 
                 <li class="nav-item pt-5">
-                    <a class="nav-link" href="#">ORDERS</a>
+                    <a class="nav-link" href="{% url 'orders'%}">ORDERS</a>
                 </li>
                 <li class="nav-item pt-5">
                     <a class="nav-link" href="{%url 'cart'%}">CART</a>
@@ -159,10 +159,6 @@
                 <label> Address Line 1</label>
                 {{profile_form.address_line_1}}
             </div>
-            <div class="form_group">
-                <label> Address Line 2 </label>
-                {{profile_form.address_line_2}}
-            </div>
             <div class="form_row">
                 <div class="form-group col-md-4">
                     <label> City</label>
@@ -175,10 +171,6 @@
                 <div class="form-group col-md-4">
                     <label> Country</label>
                     {{profile_form.country}}
-                </div>
-                <div class="form-group col-md-4">
-                    <label> PIN CODE</label>
-                    {{profile_form.pin_code}}
                 </div>
             </div>
             <input type="submit" value="save" class="btn btn-primary">
