--- a/templates/user_templates/forgotPassword.html
+++ b/templates/user_templates/forgotPassword.html
@@ -21,7 +21,7 @@
                     <div class="login_part_form_iner">
                         <h3>Welcome Back ! <br>
                             Please Sign in now</h3>
-                        <form class="row contact_form"  method="post" >
+                        <form class="row contact_form"  method="POST" >
                             {% csrf_token %}
                             <p style="color: red;">{{ invalid }}</p>
                             <div class="col-md-12 form-group p_star">
