--- a/templates/user_templates/orders.html
+++ b/templates/user_templates/orders.html
@@ -81,46 +81,63 @@
                     </td>
                      <td>
                       {% comment %} return order button and modal {% endcomment %}
+                      <td>
+            {% if order.order.status == 'Delivered' %}
+						
+						  <button onclick="openPopup('returnPopup')" type="button" class="btn btn-primary" data-toggle="modal" data-target="#returnModal{{ order.order.id }}">
+							Return Order
+						  </button>
+						
+						
+					
+						
+						{% elif order.order.status == 'Cancelled'%}<td>Cancelled</td>
+						{% elif order.order.status == 'Return'%}<td>Returned</td>
+            {% elif order.order.status == 'New'%}<td> <a href="{%url 'cancel_order' order.order.id %}" class="btn btn-danger mt-2">Cancel Order</a></td>
+            {% elif order.order.status == 'Shipped'%}<td> <a href="{%url 'cancel_order' order.order.id %}" class="btn btn-danger mt-2">Cancel Order</a></td>
+            {% elif order.order.status == 'Confirmed'%}<td> <a href="{%url 'cancel_order' order.order.id %}" class="btn btn-danger mt-2">Cancel Order</a></td>
 
-                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#returnModal">
-                        Return Order
-                      </button>
-                      
-                      <!-- Modal form for return reason -->
-                      <div class="modal fade" id="returnModal" tabindex="-1" role="dialog" aria-labelledby="returnModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="returnModalLabel">Return Reason</h5>
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                              </button>
-                            </div>
-                            <div class="modal-body">
-                              {% comment %} <form method="post" action="{% url 'return_order' order.order.id %}"> {% endcomment %}
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <button type="submit" class="btn btn-primary">Submit</button>
-                              </form>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      {%if order.order.status == "CANCELED"%}
+
+					
+					
+						{% endif %}
+			  
+			  
+			  <!-- Return Order Modal -->
+			  <div id="returnModal{{ order.order.id }}" class="modal fade returnModal">
+				<div class="modal-dialog modal-dialog-centered">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h5 class="modal-title">Return Order</h5>
+					  <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="closePopup('returnPopup')">
+						<span aria-hidden="true">&times;</span>
+					  </button>
+					</div>
+					<div class="modal-body">
+					  <form id="returnForm" method="POST" action=" {% url 'return_order' order.order.id %}">
+						{% csrf_token %}
+						<textarea name="return_reason" placeholder="Enter return reason" required></textarea>
+						<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+						<button type="submit" class="btn btn-danger">Confirm Return </button>
+					  </form>
+					</div>
+				  </div>
+				</div>
+                    {%if order.order.status == "Cancelled "%}
                       {% comment %} end of return order modal {% endcomment %}
                      
-                     {% else %}
-                     <a href="{%url 'cancel_order' order.order.id %}" class="btn btn-danger mt-2">Cancel</a>
+                     
+                    
                      {% endif %}
 
                              
-                            </td> 
+                            
 
                             </div>
                           </div>
                         </div>
                       </div>
- 
+                    </div>
                             {% comment %} modal end {% endcomment %}
                           
 
