--- a/templates/user_templates/product_details.html
+++ b/templates/user_templates/product_details.html
@@ -198,7 +198,7 @@
                     <p>{{single_product.brand}}</p>
                    <h4 class="mt-3">{{single_product.name}}</h4>
                    <h6 class="mt-3">product review</h6>
-                   <h5 class="mt-3"> <span style="color:grey;"><s> MRP ₹{{single_product.original_price}} </s></span>  OFFER PRICE  <span style="font-weight:bold;">${{single_product.offer_price}} </span></h5>
+                   <h5 class="mt-3"> <span style="color:grey;"><s> MRP ₹{{single_product.original_price}} </s></span>  OFFER PRICE  <span style="font-weight:bold;">₹{{single_product.offer_price}} </span></h5>
                    <h6 class="mt-2"><span style="color:grey;">(Inclusive of all taxes)</span></h6>
                    <h6 class="mt-3">Maritime from Titan - Sea Green Chronograph Watch with Lateen sail inspired indices</h6>
                     {% comment %} <div class="card_area">
@@ -231,7 +231,7 @@
 
                                 </div>
                                 <div class="add_to_cart ml-2">
-                                    <a href="" class="buy-now-btn">BUY NOW</a>
+                                    <a href="{% url 'add_to_wishlist' single_product.id %}" class="buy-now-btn">Add to Wishlist</a>
 
                                 </div>
                                 {% endif %}
@@ -312,9 +312,9 @@
                   $('.add-to-cart-btn').text('Added to Cart');
                   $('.add-to-cart-btn').addClass('added-to-cart-btn');
                   $('.add-to-cart-btn').removeClass('add-to-cart-btn');
-                  $('.buy-now-btn').text('View Cart');
-                  $('.buy-now-btn').addClass('view-cart-btn');
-                  $('.buy-now-btn').removeClass('buy-now-btn');
+                  // $('.buy-now-btn').text('View Cart');
+                 // $('.buy-now-btn').addClass('view-cart-btn');
+                 // $('.buy-now-btn').removeClass('buy-now-btn');
                 } else {
                   // Show error message
                   alert('Error: ' + response.message);
