--- a/templates/user_templates/resetPassword.html
+++ b/templates/user_templates/resetPassword.html
@@ -1,35 +1,44 @@
 {% extends 'user_templates/base.html' %}
 
 {% block content %}
- 
+  
 
-
-  <section class="login_part mx-auto pt-5 ">
-    <div class="container rounded shadow ">
-        <div class="row align-items-center justify-content-center">
-            
-            <div class="col-lg-12 col-md-12 mx-auto">
-                <div class="login_part_form mx-auto">
+  <section class="login_part pt-5 ">
+    <div class="container rounded shadow">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6">
+                <div class="login_part_text text-center">
+                    <div class="login_part_text_iner">
+                        <h2>New to our Shop?</h2>
+                        <p>There are advances being made in science and technology
+                            everyday, and a good example of this is the</p>
+                        <a href="/signup" class="btn_3">Create an Account</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6">
+                <div class="login_part_form">
                     <div class="login_part_form_iner">
                         <h3>Welcome Back ! <br>
                             Please Sign in now</h3>
-                        <form class="row contact_form"  method="post" >
-                            {% csrf_token %}
-                            <p style="color: red;">{{ invalid }}</p>
-                            <div class="col-md-12 form-group p_star">
-                               
-                                    {{form.code}}
-                            </div>
-                            
-                            <div class="col-md-12 form-group">
-                                {% comment %} asdjfhasduf {% endcomment %}
+                            <form method="POST">
+                                {% csrf_token %}
                                 
-                                <button type="submit" value="submit" class="btn_3">
-                                    log in
-                                </button>
-                               
-                            </div>
-                        </form>
+                                    <div class="form-outline mb-4">
+                                      <label class="form-label">New Password</label>
+                                      <input type="password" id="password" name="password" class="form-control form-control-lg" required="" >                 
+                                    </div>
+                    
+                                    <div class="form-outline mb-4">
+                                        <label class="form-label">Confirm Password</label>
+                                        <input type="password" id="confirm_password" name="confirm_password" class="form-control form-control-lg" required="" >                 
+                                    </div>
+                                    
+                          
+                                    <!-- Submit button -->
+                                    <input type="submit" class="btn btn-primary btn-lg btn-block" value="Reset Password">
+                                </form>
+                    
                     </div>
                 </div>
             </div>
