--- a/templates/user_templates/wishlist.html
+++ b/templates/user_templates/wishlist.html
@@ -23,11 +23,13 @@
         <div class="container">
 
     {% if not wishlist %}
+    
      <h2 class="text-center">Your Wishlist is empty</h2>
      <br>
      <div class="text-center">
       <a href="{% url 'shop'%}" class="btn_1">Continue shopping</a>
      </div>
+     
     {% else %}
           <div class="cart_inner">
             <div class="table-responsive">
@@ -56,10 +58,10 @@
                       </div>
                     </td>
                     <td>
-                        <h5> <s>${{product.original_price}}</s></h5>
+                        <h5> <s>₹{{product.original_price}}</s></h5>
                       </td>
                     <td>
-                      <h5 style="color:red">${{product.offer_price}}</h5>
+                      <h5 style="color:red">₹{{product.offer_price}}</h5>
                     </td>
                     <td>
                      <a href="{%url 'add_cart' product.id  %}"  class="btn btn-primary">Add to Cart</a>
