--- a/templates/user_templates/product_details.html
+++ b/templates/user_templates/product_details.html
@@ -244,56 +244,13 @@
             </div>
           </div>
         </div>
-        <!--================End Single Product Area =================-->
-        <!-- subscribe part here -->
-        {% comment %} <section class="subscribe_part section_padding">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <div class="subscribe_part_content">
-                            <h2>Get promotions & updates!</h2>
-                            <p>Seamlessly empower fully researched growth strategies and interoperable internal or “organic” sources credibly innovate granular internal .</p>
-                            <div class="subscribe_form">
-                                <input type="email" placeholder="Enter your mail">
-                                <a href="#" class="btn_1">Subscribe</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> {% endcomment %}
-        <!-- subscribe part end -->
+       
     </main>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    {% comment %} <script>
-        $(document).ready(function() {
-            $('.add-to-cart-btn').click(function(event) {
-              event.preventDefault();
-              var url = $(this).attr('href');
-          
-              $.ajax({
-                url: url,
-                type: 'GET',
-                dataType: 'json',
-                success: function(response) {
-                  if (response.success) {
-                    alert('Product added to cart successfully!');
-                  } else {
-                    alert('Error: ' + response.message);
-                  }
-                },
-                error: function(xhr, ajaxOptions, thrownError) {
-                  alert('Error: ' + xhr.status + ' ' + thrownError);
-                }
-              });
-            });
-          });
-          
-          
-          
-    </script> {% endcomment %}
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
     <script>
         $(document).ready(function() {
