--- a/templates/user_templates/order_details.html
+++ b/templates/user_templates/order_details.html
@@ -78,9 +78,9 @@
                   <!-- Include any other order-related information in the same format -->
                   <tr>
                     <th>Product Price:</th>
-                    <td >₹{{ total_price }}</td>
+                    <td >₹{{ orderproduct.product_price }}</td>
                     <th>Tax:</th>
-                    <td >₹{{ total_price }}</td>
+                    <td >₹{{ order.tax }}</td>
                 </tr>
                     <tr>
                     <th>Quantity:</th>
