--- a/templates/user_templates/shop.html
+++ b/templates/user_templates/shop.html
@@ -73,7 +73,7 @@
                                     </div>
                                     <div class="popular-caption">
                                         <h3 ><a href="{% url 'product_details' id=product.id  %}">{{product.name}}</a></h3>
-                                         <span>₹ {{product.original_price}}</span> 
+                                         <span>₹ {{product.offer_price}}</span> 
                                     </div>
                                 </div>
                             </div>
