--- a/templates/user_templates/wallet.html
+++ b/templates/user_templates/wallet.html
@@ -142,7 +142,7 @@
             <div class="sidebar pl-5 ">
                 <ul class="nav flex-column">
                     <div class="row ">
-                    <img src="{{userprofile.profile_picture.url}}" alt="Profile Image" class="profile-image">
+                    {% comment %} <img src="{{userprofile.profile_picture.url}}" alt="Profile Image" class="profile-image"> {% endcomment %}
                     <div class="field-value nav-link alignn">{{user.username}}</div>
                 </div>
                     <li class="nav-item pt-5">
