removed all print statements and agains adding because pull request not showing in git hub 2

--- a/templates/user_templates/add_address.html
+++ b/templates/user_templates/add_address.html
@@ -140,7 +140,7 @@
         <form action="" method="POST">
             {% csrf_token %}
            {{form.as_p}}
-            
+            {% comment %} hi {% endcomment %}
             <input type="submit" value="add address" class="btn btn-primary">
         </form>
             
